--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -41,7 +41,7 @@
     <main class="page__grise">
       <div class="page__grise__cover__titre">
         <div class="page__grise__cover__coeur">
-          <div class="page__grise__titre">A la française</div>
+          <h1 class="page__grise__titre">A la française</h1>
           <a href="#">
             <span class="page__grise__coeur1"><i class="fa-regular fa-heart"></i></span>
             <span class="page__grise__coeur2"><i class="fa-solid fa-heart"></i></span>
@@ -54,7 +54,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Tartare de poulpe acidulé</h4>
+              <h3>Tartare de poulpe acidulé</h3>
               <div class="page__menu__stitre">
                 <p>Aux zestes d'orange</p>
                 <div class="page__menu__mony">
@@ -70,7 +70,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Velouté de légumes d'antan</h4>
+              <h3>Velouté de légumes d'antan</h3>
               <div class="page__menu__stitre">
                 <p>Carotte, panais, topinambour</p>
                 <div class="page__menu__mony">
@@ -86,7 +86,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Soupe à l'oignon</h4>
+              <h3>Soupe à l'oignon</h3>
               <div class="page__menu__stitre">
                 <p>Revisitée</p>
                 <div class="page__menu__mony">
@@ -105,7 +105,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Coquilles Saint-Jacques</h4>
+              <h3>Coquilles Saint-Jacques</h3>
               <div class="page__menu__stitre">
                 <p>Accompagnées d'une purée de panais</p>
                 <div class="page__menu__mony">
@@ -121,7 +121,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Magret de canard</h4>
+              <h3>Magret de canard</h3>
               <div class="page__menu__stitre">
                 <p>Et parmentier de pommes de terre</p>
                 <div class="page__menu__mony">
@@ -137,7 +137,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+              <h3>Pigeonneau d’Ille-et-Vilaine</h3>
               <div class="page__menu__stitre">
                 <p>Sur son lit de gnocchis aux légumes</p>
                 <div class="page__menu__mony">
@@ -157,7 +157,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Pétales de violettes glacés</h4>
+              <h3>Pétales de violettes glacés</h3>
               <div class="page__menu__stitre">
                 <p>Et purée de noisettes</p>
                 <div class="page__menu__mony">
@@ -173,7 +173,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Fondant au chocolat</h4>
+              <h3>Fondant au chocolat</h3>
               <div class="page__menu__stitre">
                 <p>Revisité</p>
                 <div class="page__menu__mony">
@@ -189,7 +189,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Millefeuille croustillant</h4>
+              <h3>Millefeuille croustillant</h3>
               <div class="page__menu__stitre">
                 <p>Myrtilles et pâte d’amande</p>
                 <div class="page__menu__mony">
