--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -21,7 +21,7 @@
     />
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/dd535e6d64.js" crossorigin="anonymous"></script>
-    <title>Restaurant "La note enchantée</title>
+    <title>Restaurant La note enchantée</title>
   </head>
   <body>
     <!-- Header -->
@@ -41,7 +41,7 @@
     <main class="page__grise">
       <div class="page__grise__cover__titre">
         <div class="page__grise__cover__coeur">
-          <div class="page__grise__titre">La note enchantée</div>
+          <h1 class="page__grise__titre">La note enchantée</h1>
           <a href="#">
             <span class="page__grise__coeur1"><i class="fa-regular fa-heart"></i></span>
             <span class="page__grise__coeur2"><i class="fa-solid fa-heart"></i></span>
@@ -54,7 +54,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Ravioles de foie gras</h4>
+              <h3>Ravioles de foie gras</h3>
               <div class="page__menu__stitre">
                 <p>Accompagnés de leur crème à la truffe</p>
                 <div class="page__menu__mony">
@@ -70,7 +70,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Caviar osciètre</h4>
+              <h3>Caviar osciètre</h3>
               <div class="page__menu__stitre">
                 <p>Sur blini à la farine de blé noir</p>
                 <div class="page__menu__mony">
@@ -86,7 +86,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Homard et espuma de potiron</h4>
+              <h3>Homard et espuma de potiron</h3>
               <div class="page__menu__stitre">
                 <p>Mariné aux zestes d'orange</p>
                 <div class="page__menu__mony">
@@ -102,7 +102,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Foie gras de canard cuit entier</h4>
+              <h3>Foie gras de canard cuit entier</h3>
               <div class="page__menu__stitre">
                 <p>Confiture de figue et pain toasté</p>
                 <div class="page__menu__mony">
@@ -121,7 +121,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Noix de coquilles Saint-Jacques</h4>
+              <h3>Noix de coquilles Saint-Jacques</h3>
               <div class="page__menu__stitre">
                 <p>Sur lit de purée de céleri-rave</p>
                 <div class="page__menu__mony">
@@ -137,7 +137,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Langoustine poêlée</h4>
+              <h3>Langoustine poêlée</h3>
               <div class="page__menu__stitre">
                 <p>Purée de patate douce</p>
                 <div class="page__menu__mony">
@@ -153,7 +153,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Mijoté de queue de boeuf</h4>
+              <h3>Mijoté de queue de boeuf</h3>
               <div class="page__menu__stitre">
                 <p>Et riz sauvage aux zestes de citron</p>
                 <div class="page__menu__mony">
@@ -172,7 +172,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Macaron noisette et chocolat</h4>
+              <h3>Macaron noisette et chocolat</h3>
               <div class="page__menu__stitre">
                 <p>Revisité</p>
                 <div class="page__menu__mony">
@@ -188,7 +188,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Baba au rhum revisité</h4>
+              <h3>Baba au rhum revisité</h3>
               <div class="page__menu__stitre">
                 <p>Avec son coulis de citron</p>
                 <div class="page__menu__mony">
@@ -204,7 +204,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Tarte au citron meringuée</h4>
+              <h3>Tarte au citron meringuée</h3>
               <div class="page__menu__stitre">
                 <p>Déstructurée</p>
                 <div class="page__menu__mony">
