--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -42,7 +42,7 @@
     <main class="page__grise">
       <div class="page__grise__cover__titre">
         <div class="page__grise__cover__coeur">
-          <div class="page__grise__titre">La palette du gout</div>
+          <h1 class="page__grise__titre">La palette du gout</h1>
           <a href="#">
             <span class="page__grise__coeur1"><i class="fa-regular fa-heart"></i></span>
             <span class="page__grise__coeur2"><i class="fa-solid fa-heart"></i></span>
@@ -57,7 +57,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Fricassée d'escargot</h4>
+              <h3>Fricassée d'escargot</h3>
               <div class="page__menu__stitre">
                 <p>Au piment d'Espelette</p>
                 <div class="page__menu__mony">
@@ -73,7 +73,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Foie gras de canard mi-cuit</h4>
+              <h3>Foie gras de canard mi-cuit</h3>
               <div class="page__menu__stitre">
                 <p>Et ses copeaux de truffe noire</p>
                 <div class="page__menu__mony">
@@ -89,7 +89,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Oeuf au plat</h4>
+              <h3>Oeuf au plat</h3>
               <div class="page__menu__stitre">
                 <p>Accompagné de sa ribambelle de légumes</p>
                 <div class="page__menu__mony">
@@ -109,7 +109,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Filet de boeuf aux herbes</h4>
+              <h3>Filet de boeuf aux herbes</h3>
               <div class="page__menu__stitre">
                 <p>Accompagné de sa ribambelle de légumes</p>
                 <div class="page__menu__mony">
@@ -125,7 +125,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Parmentier de queue de boeuf</h4>
+              <h3>Parmentier de queue de boeuf</h3>
               <div class="page__menu__stitre">
                 <p>À la truffe noire sur sa purée depanais</p>
                 <div class="page__menu__mony">
@@ -141,7 +141,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Filet de turbot</h4>
+              <h3>Filet de turbot</h3>
               <div class="page__menu__stitre">
                 <p>Aux agrumes</p>
                 <div class="page__menu__mony">
@@ -162,7 +162,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Paris-Brest</h4>
+              <h3>Paris-Brest</h3>
               <div class="page__menu__stitre">
                 <p>Revisité</p>
                 <div class="page__menu__mony">
@@ -178,7 +178,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Macaron au chocolat d'exception</h4>
+              <h3>Macaron au chocolat d'exception</h3>
               <div class="page__menu__stitre">
                 <p>Et glace à la vanille de Madagascar</p>
                 <div class="page__menu__mony">
@@ -194,7 +194,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Mousse au chocolat</h4>
+              <h3>Mousse au chocolat</h3>
               <div class="page__menu__stitre">
                 <p>Au piment d'Espelette et à la truffe noire</p>
                 <div class="page__menu__mony">
