--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -41,7 +41,7 @@
     <main class="page__grise">
       <div class="page__grise__cover__titre">
         <div class="page__grise__cover__coeur">
-          <div class="page__grise__titre">Le délice des sens</div>
+          <h1 class="page__grise__titre">Le délice des sens</h1>
           <a href="#">
             <span class="page__grise__coeur1"><i class="fa-regular fa-heart"></i></span>
             <span class="page__grise__coeur2"><i class="fa-solid fa-heart"></i></span>
@@ -54,7 +54,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Tartare de thon</h4>
+              <h3>Tartare de thon</h3>
               <div class="page__menu__stitre">
                 <p>Assaisonné au yuzu</p>
                 <div class="page__menu__mony">
@@ -70,7 +70,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Bouchée de homard croustillant</h4>
+              <h3>Bouchée de homard croustillant</h3>
               <div class="page__menu__stitre">
                 <p>Et sa farandole de petits légumes</p>
                 <div class="page__menu__mony">
@@ -86,7 +86,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Velouté de cèpes</h4>
+              <h3>Velouté de cèpes</h3>
               <div class="page__menu__stitre">
                 <p>Aux truffes</p>
                 <div class="page__menu__mony">
@@ -105,7 +105,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Poulet rôti aux herbes de Provence</h4>
+              <h3>Poulet rôti aux herbes de Provence</h3>
               <div class="page__menu__stitre">
                 <p>Et sa crème de truffe</p>
                 <div class="page__menu__mony">
@@ -121,7 +121,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Langouste rôtie</h4>
+              <h3>Langouste rôtie</h3>
               <div class="page__menu__stitre">
                 <p>Et ses légumes de saison</p>
                 <div class="page__menu__mony">
@@ -137,7 +137,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Côte de boeuf Angus</h4>
+              <h3>Côte de boeuf Angus</h3>
               <div class="page__menu__stitre">
                 <p>Et sa purée de panais</p>
                 <div class="page__menu__mony">
@@ -157,7 +157,7 @@
         <ul>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Farandole de desserts</h4>
+              <h3>Farandole de desserts</h3>
               <div class="page__menu__stitre">
                 <p>Du chef</p>
                 <div class="page__menu__mony">
@@ -173,7 +173,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Crème brulée</h4>
+              <h3>Crème brulée</h3>
               <div class="page__menu__stitre">
                 <p>Revisité</p>
                 <div class="page__menu__mony">
@@ -189,7 +189,7 @@
           </li>
           <li class="page__menu__carte">
             <div class="page__menu__titre">
-              <h4>Tiramisu</h4>
+              <h3>Tiramisu</h3>
               <div class="page__menu__stitre">
                 <p>À la noisette</p>
                 <div class="page__menu__mony">
