réglage  des avertissement du html

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Google fonts -->
     <!--Shrikhand-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!--Roboto-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/dd535e6d64.js" crossorigin="anonymous"></script>
     <title>Accueil-ohmyfood</title>
@@ -33,7 +33,7 @@
       <!--title-->
       <div class="logo">
         <a href="#">
-          <img src="images/logo/ohmyfood.png" height="35" alt="Logo" />
+          <img src="images/logo/ohmyfood.png" height="35" alt="Logo">
         </a>
       </div>
     </header>
@@ -81,7 +81,7 @@
             <li>
               <a class="restaurant" href="la-palette-du-gout.html" title="la palette du gout">
                 <span class="restaurants__image">
-                  <img src="images/restaurants/lapalettedugout.jpg" alt="la palette du gout" />
+                  <img src="images/restaurants/lapalettedugout.jpg" alt="la palette du gout">
                   <span class="restaurants__nouvelle__carte">Nouveau</span>
                 </span>
                 <div class="cover__content">
@@ -98,7 +98,7 @@
             <li>
               <a class="restaurant" href="la-note-enchantee.html" title="la note enchantee">
                 <span class="restaurants__image">
-                  <img src="images/restaurants/lanoteenchantee.jpg" alt="la note enchantee" />
+                  <img src="images/restaurants/lanoteenchantee.jpg" alt="la note enchantee">
                   <span class="restaurants__nouvelle__carte">Nouveau</span>
                 </span>
                 <div class="cover__content">
@@ -115,7 +115,7 @@
             <li>
               <a class="restaurant" href="a-la-francaise.html" title="a la francaise">
                 <span class="restaurants__image">
-                  <img src="images/restaurants/alafrancaise.jpg" alt="a la francaise" />
+                  <img src="images/restaurants/alafrancaise.jpg" alt="a la francaise">
                 </span>
                 <div class="cover__content">
                   <div>
@@ -130,7 +130,7 @@
             <li>
               <a class="restaurant" href="le-delice-des-sens.html" title="le delice des sens">
                 <span class="restaurants__image">
-                  <img src="images/restaurants/ledelicedessens.jpg" alt="le delice des sens" />
+                  <img src="images/restaurants/ledelicedessens.jpg" alt="le delice des sens">
                 </span>
                 <div class="cover__content">
                   <div>
@@ -149,7 +149,7 @@
     <footer>
       <div class="footer">
         <div class="footer-log">
-          <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
+          <img src="images/logo/ohmyfood.png" height="20" alt="Logo">
         </div>
         <div>
           <a href="#">
