--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Google fonts -->
     <!--Shrikhand-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!--Roboto-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/dd535e6d64.js" crossorigin="anonymous"></script>
     <title>Le délice des sens</title>
@@ -29,13 +29,13 @@
       <!--title-->
       <div class="logo">
         <a class="fleche" href="index.html" title="page d'accueil"><i class="fa-solid fa-arrow-left"></i></a>
-        <img src="images/logo/ohmyfood.png" height="35" alt="Logo" />
+        <img src="images/logo/ohmyfood.png" height="35" alt="Logo">
       </div>
     </header>
 
     <div class="restaurant">
       <span class="restaurants__image">
-        <img src="images/restaurants/ledelicedessens.jpg" alt="le delice des sens" />
+        <img src="images/restaurants/ledelicedessens.jpg" alt="le delice des sens">
       </span>
     </div>
     <main class="page__grise">
@@ -212,7 +212,7 @@
     <footer>
       <div class="footer">
         <div class="footer-log">
-          <img src="images/logo/ohmyfood.png" height="20" alt="Logo" />
+          <img src="images/logo/ohmyfood.png" height="20" alt="Logo">
         </div>
         <div>
           <a href="#">
